[package]
name = "bybit_async"
version = "0.0.1"
license = "MIT"
authors = []
edition = "2021"

[lib]
name = "bybit_async"
path = "src/lib.rs"

[dependencies]
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16"
hex = "0.4"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json", "native-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde_qs = "0.13.0"
serde_repr = "0.1.19"
rand = "0.8.5"
